k8s/EKS/Deployment_fullstack/appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
  labels: 
    app: vproapp
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25% # So luong Pod moi co the tao them
      maxUnvaliable: 25% #quy định số Pod cũ có thể bị ngừng cùng lúc.
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: vproapp
  template:
    metadata:
      labels:
        app: vproapp
    spec:
      containers:
      - name: vproapp
        image: vprocontainers/vprofileapp
        imagePullPolicy: Always
        ports:
        - name: vproapp-port
          containerPort: 8080
